--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,11 +5,15 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    <div>
+      <span class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</span>
+      {% include social_share.html %}
+    </div>
   </header>
 
   <article class="post-content">
     {{ content }}
+    {% include social_share.html %}
   </article>
 
 </div>
