--- a/css/main.scss
+++ b/css/main.scss
@@ -57,5 +57,6 @@ $on-laptop:        800px;
         "base",
         "layout",
         "syntax-highlighting",
-        "header"
+        "header",
+        "social_share"
 ;
