Changes copyright to creative commons.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -175,7 +175,10 @@ footer {
     width: 100%;
     background-color: $at-blue;
 
-
+    a {
+        color: white;
+        text-decoration: underline;
+    }
 
    .copyright-base-inner {
         width: 100%;
