--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,17 +3,12 @@
     {% if site.twitter_username %}
     <li>
       <a href="https://twitter.com/{{ site.twitter_username }}">
-        <span class="icon  icon--twitter">
-          <svg viewBox="0 0 16 16">
-            <path fill="#828282" d="M15.969,3.058c-0.586,0.26-1.217,0.436-1.878,0.515c0.675-0.405,1.194-1.045,1.438-1.809
-            c-0.632,0.375-1.332,0.647-2.076,0.793c-0.596-0.636-1.446-1.033-2.387-1.033c-1.806,0-3.27,1.464-3.27,3.27 c0,0.256,0.029,0.506,0.085,0.745C5.163,5.404,2.753,4.102,1.14,2.124C0.859,2.607,0.698,3.168,0.698,3.767 c0,1.134,0.577,2.135,1.455,2.722C1.616,6.472,1.112,6.325,0.671,6.08c0,0.014,0,0.027,0,0.041c0,1.584,1.127,2.906,2.623,3.206 C3.02,9.402,2.731,9.442,2.433,9.442c-0.211,0-0.416-0.021-0.615-0.059c0.416,1.299,1.624,2.245,3.055,2.271 c-1.119,0.877-2.529,1.4-4.061,1.4c-0.264,0-0.524-0.015-0.78-0.046c1.447,0.928,3.166,1.469,5.013,1.469 c6.015,0,9.304-4.983,9.304-9.304c0-0.142-0.003-0.283-0.009-0.423C14.976,4.29,15.531,3.714,15.969,3.058z"/>
-          </svg>
-        </span>
+        {% include icons/twitter.html %}
         <span class="username">{{ site.twitter_username }}</span>
       </a>
     </li>
     {% endif %}
-    
+
     {% if site.github_username %}
     <li>
       <a href="https://github.com/{{ site.github_username }}">
@@ -30,16 +25,12 @@
     {% if site.facebook_username %}
     <li>
       <a href="https://www.facebook.com/{{ site.facebook_username }}">
-        <span class="icon  icon--facebook">
-            <svg viewBox="0 0 33 33" >
-              <path fill="#828282" d="M 17.996,32L 12,32 L 12,16 l-4,0 l0-5.514 l 4-0.002l-0.006-3.248C 11.993,2.737, 13.213,0, 18.512,0l 4.412,0 l0,5.515 l-2.757,0 c-2.063,0-2.163,0.77-2.163,2.209l-0.008,2.76l 4.959,0 l-0.585,5.514L 18,16L 17.996,32z" />
-            </svg>
-          <span class="username">{{ site.facebook_username }}</span>
-        </span>
+        {% include icons/facebook.html %}
+        <span class="username">{{ site.facebook_username }}</span>
       </a>
     </li>
     {% endif %}
-    
+
     <li>
       <a href="https://careers.autotrader.co.uk/">
         <span class="icon  icon--autotrader">
@@ -67,5 +58,5 @@
 </footer>
 
 <div class="copyright-base">
-  <div class="copyright-base-inner">Copyright © Auto Trader Limited {{ 'now' | date: "%Y" }}</div>
+  <div class="copyright-base-inner"><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</div>
 </div>
