--- a/_sass/_social_share.scss
+++ b/_sass/_social_share.scss
@@ -1,6 +1,6 @@
 .social-share {
     font-size: $small-font-size;
-    color: $grey-color;
+    color: $text-color;
 
     a {
       text-decoration: none;
