--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -7,11 +7,13 @@
 
   .wrapper {
     .at-logo {
-      display: block;
       text-indent: -9999px;
-      width: 200px;
-      background: url(../images/autotrader.svg) no-repeat center;
-      background-size: 100%;
+      background-image: url(../images/autotrader.svg);
+      background-size: 100% 100%;
+      background-repeat: no-repeat;
+      width: 260px;
+      margin: 5px 0;
+      display: block;
       text-align: left;
     }
 
@@ -27,16 +29,21 @@
 }
 
 .site-nav {
-  @include bg-gradient-t2b($at-blue-grad-light, $at-blue);
-  display:block;
+  position: relative;
   width: 100%;
+  height: 56px;
+  background: $brand-color;
+  border-bottom: none;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1), 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  display:block;
   text-align:left;
+
   svg {
     color: $at-white;
   }
 
   .at-logo {
-      text-align:left;
+    text-align:left;
     text-indent: -9999px;
 
     @include media-query($on-palm) {
