--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -122,7 +122,7 @@
 
 footer {
     font-size: 15px;
-    color: $grey-color;
+    color: $text-color;
     margin-left: -$spacing-unit / 2;
     text-align: center;
     @extend %clearfix;
@@ -173,7 +173,9 @@ footer {
 
 .copyright-base {
     width: 100%;
-    background-color: $at-blue;
+    background: $brand-color;
+    border-bottom: none;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1), 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 
     a {
         color: white;
@@ -209,7 +211,10 @@ footer {
 }
 
 .page-heading {
-    font-size: 20px;
+	font-size: 40px;
+	font-weight: 500;
+	line-height: 1.1;
+	color: $brand-color;
 }
 
 .post-list {
@@ -223,7 +228,7 @@ footer {
 
 .post-meta {
     font-size: $small-font-size;
-    color: $grey-color;
+    color: $text-color;
 }
 
 .post-link {
@@ -253,12 +258,14 @@ footer {
 }
 
 .post-title {
-    font-size: 42px;
-    letter-spacing: -1px;
-    line-height: 1;
+	font-size: 40px;
+	font-weight: 500;
+	line-height: 1.1;
 
     @include media-query($on-laptop) {
-        font-size: 36px;
+        font-size: 32px;
+        font-weight: 500;
+        line-height: 1.12;
     }
 }
 
