--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -23,7 +23,7 @@
   }
 
    span {
-    color: $at-gray-darkest;
+    color: $at-grey-dark;
      display: none;
   }
 }
@@ -31,8 +31,8 @@
 .site-nav {
   position: relative;
   width: 100%;
-  height: 56px;
-  background: $brand-color;
+  height: 32px;
+  background: $at-blue;
   border-bottom: none;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1), 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   display:block;
