Change facebook image to large enough.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
     <meta name="msapplication-wide310x150logo" content="images/favicons/msapplication-wide.png">
     <meta name="msapplication-square310x310logo" content="images/favicons/msapplication-large.png">
 
-	<meta property="og:image" content="{{ site.url }}/images/AT-logo-c@3x[2].png" />
+	<meta property="og:image" content="{{ site.url }}/images/favicons/msapplication-large.png" />
 	<meta property="og:title" content="{{ site.title }}" />
 	<meta property="og:url" content="{{ site.url }}" />
 	<meta property="og:description" content="{{ site.description }}" />
