--- a/_includes/social_share.html
+++ b/_includes/social_share.html
@@ -1,6 +1,6 @@
 <span class="social-share">
   Share:
-  <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.github.url }}{{ page.url }}&via=autotraderlife&related={{ site.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter">
+  <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.github.url }}{{ page.url }}&via={{ site.twitter.username }}&related={{ site.twitter.username }}" rel="nofollow" target="_blank" title="Share on Twitter">
     {% include icons/twitter.html %}
   </a>
   <a href="https://facebook.com/sharer.php?u={{ site.github.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
