--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,15 +20,19 @@
     <meta name="msapplication-wide310x150logo" content="images/favicons/msapplication-wide.png">
     <meta name="msapplication-square310x310logo" content="images/favicons/msapplication-large.png">
 
-	<meta property="og:image" content="{{ site.url }}/images/favicons/msapplication-large.png" />
-	<meta property="og:title" content="{{ site.title }}" />
-	<meta property="og:url" content="{{ site.url }}" />
-	<meta property="og:description" content="{{ site.description }}" />
-	<meta property="og:type" content="website" />
+    <meta property="og:image" content="{{ site.url }}/images/favicons/msapplication-large.png" />
+    <meta property="og:title" content="{{ site.title }}" />
+    <meta property="og:url" content="{{ site.url }}" />
+    <meta property="og:description" content="{{ site.description }}" />
+    <meta property="og:type" content="website" />
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.github.url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.github.url }}">
+
+    {% if page.typescript-syntax %}
+        <link rel="stylesheet" href="{{ site.github.url }}/css/typescript-syntax-highlighting.css">
+    {% endif %}
 </head>
