--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="images/favicons/favicon.png"/>
-    <link rel="icon" href="images/favicons/favicon.png">
+    <link rel="icon" href="{{ site.github.url }}/images/favicons/favicon.png">
 
     <link rel="apple-touch-icon" href="images/favicons/touch-icon-iphone.png">
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicons/favicon57.png">
