--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,23 +2,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" href="images/favicons/favicon.png"/>
+    <link rel="shortcut icon" href="{{ site.github.url }}/images/favicons/favicon.png"/>
     <link rel="icon" href="{{ site.github.url }}/images/favicons/favicon.png">
 
-    <link rel="apple-touch-icon" href="images/favicons/touch-icon-iphone.png">
-    <link rel="apple-touch-icon" sizes="57x57" href="images/favicons/favicon57.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/favicons/favicon72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="images/favicons/touch-icon-ipad.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/favicons/favicon114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="images/favicons/touch-icon-iphone-retina.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="images/favicons/touch-icon-ipad-retina.png">
+    <link rel="apple-touch-icon" href="{{ site.github.url }}/images/favicons/touch-icon-iphone.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="{{ site.github.url }}/images/favicons/favicon57.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ site.github.url }}/images/favicons/favicon72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="{{ site.github.url }}/images/favicons/touch-icon-ipad.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ site.github.url }}/images/favicons/favicon114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="{{ site.github.url }}/images/favicons/touch-icon-iphone-retina.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="{{ site.github.url }}/images/favicons/touch-icon-ipad-retina.png">
 
     <meta name="application-name" content="AutoTrader">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-square70x70logo" content="images/favicons/msapplication-tiny.png">
-    <meta name="msapplication-square150x150logo" content="images/favicons/msapplication-square.png">
-    <meta name="msapplication-wide310x150logo" content="images/favicons/msapplication-wide.png">
-    <meta name="msapplication-square310x310logo" content="images/favicons/msapplication-large.png">
+    <meta name="msapplication-square70x70logo" content="{{ site.github.url }}/images/favicons/msapplication-tiny.png">
+    <meta name="msapplication-square150x150logo" content="{{ site.github.url }}/images/favicons/msapplication-square.png">
+    <meta name="msapplication-wide310x150logo" content="{{ site.github.url }}/images/favicons/msapplication-wide.png">
+    <meta name="msapplication-square310x310logo" content="{{ site.github.url }}/images/favicons/msapplication-large.png">
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
