--- a/css/main.scss
+++ b/css/main.scss
@@ -76,5 +76,6 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting",
         "header",
+        "table",
         "social_share"
 ;
