--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,7 @@
-{% if page.comments %}
+{% if site.include_comments %}
+	{% if page.comments %}
+<span class="comments">
+
 	<div id="disqus_thread"></div>
 	<script>
 	
@@ -19,4 +22,6 @@
 	})();
 	</script>
 	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</span>
+	{% endif %}
 {% endif %}
