--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+comments: true
 ---
 <div class="post">
 
@@ -16,6 +17,7 @@ layout: default
   <article class="post-content">
     {{ content }}
     {% include social_share.html %}
+    {% include comments.html %}
   </article>
 
 </div>
